Turn scdoc(1) into a missing program
We don't need it to build from a dist archive, because it ships prebuilt
man pages already. Unless of course the scd file is modified, in which
case the "missing" error message will be displayed.

--- a/configure.ac
+++ b/configure.ac
@@ -17,6 +17,12 @@ AC_CHECK_PROGS([$1], [$2], [false])
 AS_IF([test "$[$1]" = false], [AC_MSG_ERROR([Could not find program $2])])
 ])
 
+AC_DEFUN([HA_MISSING_PROG], [dnl
+AC_ARG_VAR([$1], [$3])
+AM_MISSING_PROG([$1], [$2])
+AC_CHECK_PROGS([$1], [$2], [false])
+])
+
 AC_DEFUN([HA_ARG_VAR], [dnl
 AC_ARG_VAR([$1], [$2])
 AS_IF([test -z "$ac_cv_env_[$1]_set"], [$1=$3])
@@ -26,7 +32,8 @@ AC_SUBST([$1])
 HA_CHECK_PROG([QBE],   [qbe],   [QBE compiler backend])
 HA_CHECK_PROG([HARE],  [hare],  [Hare build system])
 HA_CHECK_PROG([HAREC], [harec], [Hare compiler frontend])
-HA_CHECK_PROG([SCDOC], [scdoc], [manual pages generator])
+
+HA_MISSING_PROG([SCDOC], [scdoc], [manual pages generator])
 
 HA_ARG_VAR([HAREFLAGS], [Hare build flags], [])
 HA_ARG_VAR([HAREPATH],  [PATH for Hare modules],
