Polish the build system
So far updates to individual source files were ignored and only updates
to their parent directory was considered. The previous dependency is now
gone and replaced with a proper dependency on $(haredoc_SOURCES). A new
$(HARE_MOD) variable computes the module directory to pass to $(HARE).

There are other smaller improvements.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,15 +1,21 @@
 ACLOCAL_AMFLAGS = -I m4
 
+AM_DISTCHECK_CONFIGURE_FLAGS = \
+	HAREFLAGS="$(HAREFLAGS)" \
+	$(HARE_ENV)
+
+HARE_MOD = $(srcdir)/`for f in $($(@)_SOURCES);do dirname $$f;done|sort|sed q`
+
 HARE_ENV = \
-	HAREPATH=$(HAREPATH) \
-	HAREC=$(HAREC) \
-	QBE=$(QBE) \
-	AR=$(AR) \
-	ARFLAGS=$(ARFLAGS) \
-	AS=$(AS) \
-	ASFLAGS=$(ASFLAGS) \
-	LD=$(LD) \
-	LDLINKFLAGS=$(LDLINKFLAGS)
+	HAREPATH="$(HAREPATH)" \
+	HAREC="$(HAREC)" \
+	QBE="$(QBE)" \
+	AR="$(AR)" \
+	ARFLAGS="$(ARFLAGS)" \
+	AS="$(AS)" \
+	ASFLAGS="$(ASFLAGS)" \
+	LD="$(LD)" \
+	LDLINKFLAGS="$(LDLINKFLAGS)"
 
 HARE_BUILD = env $(HARE_ENV) $(HARE) build -t $(host_cpu)
 
@@ -19,6 +25,7 @@ HARE_BUILD = env $(HARE_ENV) $(HARE) build -t $(host_cpu)
 # is still possible in the same automake project.
 CFLAGS = $(HAREFLAGS)
 LDFLAGS =
+LIBS =
 CCLD = $(HARE_BUILD)
 
 bin_PROGRAMS = haredoc
@@ -36,15 +43,16 @@ haredoc_SOURCES = \
 	cmd/haredoc/tty.ha \
 	cmd/haredoc/util.ha
 
-haredoc_LDADD = \
-	$(srcdir)/cmd/haredoc
+haredoc_DEPENDENCIES = $(haredoc_SOURCES)
 
-haredoc_CFLAGS = \
-	-D HAREPATH:str="\"$(HAREPATH)\""
+haredoc_LDADD = $(HARE_MOD)
+
+haredoc_CFLAGS = -D HAREPATH:str="\"$(HAREPATH)\""
 
 SUFFIXES = .scd
 
 .scd.1 .scd.2 .scd.3 .scd.4 .scd.5 .scd.6 .scd.7 .scd.8 .scd.9:
+	@mkdir -p `dirname $@`
 	$(AM_V_GEN)$(SCDOC) <$< >$@ || rm -f $@
 
 dist_man1_MANS = cmd/haredoc/haredoc.1
